add 2 get method
